@@ -40,7 +40,9 @@
 <ul class="simple">
 <li>coders/cals.c (ReadCALSImage): Silence Coverity 10086 &quot;Unchecked
 return value from library&quot;.
-(ReadCALSImage): Silence Coverity 10085 &quot;Unchecked return value&quot;.</li>
+(ReadCALSImage): Silence Coverity 10085 &quot;Unchecked return value&quot;.
+(ReadCALSImage): Silence Coverity 10084 &quot;Unchecked return value
+from library&quot;.</li>
 <li>magick/enhance.c (ModulateImage): Silence Coverity 10087
 &quot;Unchecked return value&quot;.</li>
 </ul>
